@@ -1350,6 +1350,15 @@ id-or-obj should be either a breakpoint id or a breakpoint object."
   (geben-breakpoint-remove session
 			   (geben-breakpoint-list (geben-session-breakpoint session))))
 
+(defun geben-breakpoint-find-at-pos (session buf pos)
+  (with-current-buffer buf
+    (remove-if 'null
+	       (mapcar (lambda (overlay)
+			 (let ((bp (overlay-get overlay 'bp)))
+			   (and (eq :line (plist-get bp :type))
+				bp)))
+		       (overlays-at pos)))))
+
 ;; breakpoint list
 
 (defface geben-breakpoint-fileuri
@@ -1549,7 +1558,8 @@ Key mapping and other information is described its help page."
 	(unless bp
 	  (let* ((type (intern-soft (concat ":" (xml-get-attribute msg-bp 'type))))
 		 (fileuri (xml-get-attribute-or-nil msg-bp 'filename))
-		 (lineno (xml-get-attribute-or-nil msg-bp 'lineno))
+		 (lineno (or (xml-get-attribute-or-nil msg-bp 'lineno)
+			     (xml-get-attribute-or-nil msg-bp 'line)))
 		 (function (xml-get-attribute-or-nil msg-bp 'function))
 		 (class (xml-get-attribute-or-nil msg-bp 'class))
 		 (method function)
@@ -2828,12 +2838,12 @@ and call `geben-dbgp-entry' with each chunk."
       (geben-dbgp-send-command session "status")
     (lambda (session cmd msg err)
       (unless err
-	(if (equal "break" (xml-get-attribute msg 'status))
+	(if (not geben-pause-at-entry-line)
+	    (geben-dbgp-command-run session)
+	  (if (equal "break" (xml-get-attribute msg 'status))
 	    ;; it is nonconforming to DBGp specs; anyway manage it.
-	    (run-hook-with-args 'geben-dbgp-continuous-command-hook session)
-	  (if geben-pause-at-entry-line
-	      (geben-dbgp-command-step-into session)
-	    (geben-dbgp-command-run session)))))))
+	      (run-hook-with-args 'geben-dbgp-continuous-command-hook session)
+	    (geben-dbgp-command-step-into session)))))))
 
 ;; features
 
@@ -2946,7 +2956,7 @@ If non-nil, GEBEN will query the user before removing all breakpoints."
   ;;(define-key geben-mode-map "G" 'geben-Go-nonstop-mode)
   (define-key geben-mode-map ">" 'geben-set-redirect)
   ;;(define-key geben-mode-map "T" 'geben-Trace-fast-mode)
-  ;;(define-key geben-mode-map "c" 'geben-continue-mode)
+  ;;(define-key geben-mode-map "c" 'geben-run-to-cursor)
   ;;(define-key geben-mode-map "C" 'geben-Continue-fast-mode)
 
   ;;(define-key geben-mode-map "f" 'geben-forward) not implemented
@@ -3113,6 +3123,12 @@ It will break at next breakpoint, or stops at the end of the script."
   (interactive)
   (geben-with-current-session session
     (geben-dbgp-command-run session)))
+
+;; (defun geben-run-to-cursor ()
+;;   "Run the script to where the cursor points."
+;;   (interactive)
+;;   (geben-with-current-session session
+;;     nil))
 
 (defun geben-stop ()
   "End execution of the script immediately."
@@ -3348,27 +3364,13 @@ hit-value interactively."
 				 (geben-bp-make session :watch
 						:expression expr))))
 
-(defun geben-unset-breakpoint-line (fileuri path lineno)
+(defun geben-unset-breakpoint-line ()
   "Clear a breakpoint set at the current line."
-  (interactive (list nil nil nil))
+  (interactive)
   (geben-with-current-session session
-    (when (interactive-p)
-      (setq path (buffer-file-name (current-buffer)))
-      (when (stringp path)
-	(setq lineno (and (get-file-buffer path)
-			  (with-current-buffer (get-file-buffer path)
-			    (geben-what-line))))
-	(setq fileuri (or (geben-session-source-fileuri session path)
-			  (geben-source-fileuri session path)
-			  (concat "file://" (file-truename path))))))
-    (let* ((bp (find-if (lambda (bp)
-			  (and (eq :line (plist-get bp :type))
-			       (eq lineno (plist-get bp :lineno))
-			       (equal fileuri (plist-get bp :fileuri))))
-			(geben-breakpoint-list (geben-session-breakpoint session))))
-	   (bid (and bp (plist-get bp :id))))
-      (if bid
-	  (geben-dbgp-command-breakpoint-remove session bid)))))
+    (mapc (lambda (bp)
+	    (geben-dbgp-command-breakpoint-remove session (plist-get bp :id)))
+	  (geben-breakpoint-find-at-pos session (current-buffer) (point)))))
 
 (defun geben-clear-breakpoints ()
   "Clear all breakpoints.
